--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.12.0",
-    "@mantine/hooks": "^7.12.0",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.17.0",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
